Implementação do componenet tela do usuario

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,74 +1,66 @@
-<nav class="navbar navbar-expand-lg text-nowrap font-weight-bold navbar-light " style="background-color: #F5CAC3">
 
-<div class=" altera-menu container-fluid"> 
-    
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ">
-            <div class=" col-md-3">
-                <li class="nav-item  ">
-                    <a class="nav-link text-white" href="#comoFunciona">Como funciona</a>
-                </li>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light  text-nowrap font-weight-bold  " style="background-color: #F5CAC3">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class=" col-md-3">
-                <li class="nav-item ">
-                    <a class="nav-link text-white " href="#sobreNos">Sobre nós</a>
-                </li>
-            </div>
-
-            <div class=" col-md-3">
-                <li class="nav-item ">
-                    <a class="nav-link text-white" href="#time">Conheça nosso time</a>
-                </li>
-            </div>
-
-            <div class=" col-md-3">
-                <li class="nav-item ">
-                    <a class="nav-link text-white" href="#contato">Contato</a>
-                </li>
-            </div>
-            
-    
-            
-         <div class="ml-auto  d-flex align-items-center  ">
-
-                    <div class=" container-fluid  justify-content-end">
-                        <ul class="  social-networks ">
-
-                            <li>
-                                <a  href="https://www.facebook.com/" target="_blank" class="icoFacebook">
-                                    <i class=" fa fa-facebook-square" aria-hidden="true"></i>
-                                </a>
-                            </li>
-    
-                            <li>
-                                <a href="https://www.instagram.com/" target="_blank" class="icoInstagram">
-                                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                                </a>
-                            </li>
-    
-                            <li>
-                                <a href="https://www.twitter.com/" target="_blank" class="icoTwitter">
-                                    <i class="fa fa-twitter-square" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    
-                        
-                    
-
-                    
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class=" navbar-nav mr-auto">
+                <div class="espaco">
+                    <li class="nav-item active">
+                        <a class=" text-white nav-link" href="#como">Como Funciona? <span
+                                class="sr-only">(current)</span></a>
+                    </li>
                 </div>
-           
+                <div class="espaco">
+                    <li class="nav-item">
+                        <a class=" text-white nav-link" href="#sobre">Sobre nós</a>
+                    </li>
+                </div>
+                <div class="espaco">
+                    <li class="nav-item">
+                        <a class=" text-white nav-link" href="#time">Nosso time</a>
+                    </li>
+                </div>
+                <div class="espaco">
+                    <li class="nav-item">
+                        <a class=" text-white nav-link" href="#contato">Contato</a>
+                    </li>
+                </div>
 
-        </ul>
+
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+
+                <ul class="  social-networks ">
+
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank" class="icoFacebook">
+                            <i class=" fa fa-facebook-square" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank" class="icoInstagram">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.twitter.com/" target="_blank" class="icoTwitter">
+                            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
 
 
-    </div>
-</div>
-</nav>
+
+            </form>
+        </div>
+    </nav>
+
 <!--logo-->
 
 <div class=" d-flex justify-content-center">
@@ -109,12 +101,12 @@
         <ul class="navbar-nav mr-auto cor altera-menu ">
 
 
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown ">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Categoria
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu " aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -127,7 +119,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Ofertinhas
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -140,7 +132,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Maquiagem
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -153,7 +145,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Para o cabelo
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -166,7 +158,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Cheirinho bom
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -179,7 +171,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Pele macia
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -192,7 +184,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Cuide-se
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -204,7 +196,7 @@
                     aria-haspopup="true" aria-expanded="false">
                     Vender
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Ação</a>
                     <a class="dropdown-item" href="#">Outra ação</a>
                     <div class="dropdown-divider"></div>
@@ -214,11 +206,12 @@
 
         </ul>
 
-        <form class="pesquisa" id="busca">
+        <!--/Barra de pesquisa-->
+        <div class="pesquisa" id="busca">
             <input type="text" id= "text" name="t" value placeholder="O que está procurando?" id="txtBusca" class="clear-default-value search-fiel">
             <i class="fa fa-search" aria-hidden="true" ></i>
                   
-        </form>
+        </div>
     </div>
 
 </nav>
@@ -301,7 +294,7 @@
                             alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <p class="card-text" >Some quick example text to build on the card title and make up the bulk
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the
                                 card's content.</p>
                             <a class="btn btn-primary">Quero</a>
@@ -400,8 +393,5 @@
     </div>
     <!--/.Carousel Wrapper-->
 
-    
+
 </div>
-
-
-    
