--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -4,6 +4,7 @@
 
 .conteudo {
     display: flex;
+   
 }
 
 ul.social-networks li{
@@ -21,9 +22,10 @@ ul.social-networks{
 }
 
 .fa{
-    font-size: 15pt;
+    font-size: 2rem;
     color: black;
     padding:5px;
+    
     
     }
 
@@ -38,20 +40,28 @@ color:#3b5998;
 
 .fa-twitter-square:hover{
     color:#143c91;
+
     }
     
 
- .fa-heart-o{
-    color: darkred;
- }
 
- .tamanho{
-    font-size: 10px;
-}
 
 .altera-fontes {
     font-style: normal; /*caso queira deixar alterar o estilo da fonte*/
     font-size: 0.95rem; /*caso queira alterar o tamanho da fonte*/
-    font-family: Roboto, sans-serif; /*caso queira mudar o tipo de fonte*/
+    font-family: 'Roboto', sans-serif; /*caso queira mudar o tipo de fonte*/
  
  }
+
+ .regua{
+   
+ padding-right: 35px;
+    
+    
+ }
+
+ .medida{
+     padding-left: 29px;
+ }
+
+ 
