--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -5,12 +5,12 @@
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
-        <div class="col-lg-6 col-md-12 mb-4 mb-md-0 ">
+        <div class="col-lg-6 mb-0 mb-md-0 ">
             <div class="container-fluid justify-content-left">
 
                 <div class="conteudo cor text-justify ">
                     <img src=" https://i.imgur.com/iGKLTq9.jpg" width="100" height="110" alt="logotipo">
-                    <p class="pl-5 altera-fontes">A Natureba tem como objetivo ser uma referência de plataforma no ramo da sustentabilidade conectando pequenos e médios produtores a você. Visamos não apenas à beleza e a natureza, mas a sua segurança em consumir produtos ecológicos. Quando você se cuida conosco, você também cuida do mundo.</p>
+                    <p class="pl-4 altera-fontes">A Natureba tem como objetivo ser uma referência de plataforma no ramo da sustentabilidade conectando pequenos e médios produtores a você. Visamos não apenas à beleza e a natureza, mas a sua segurança em consumir produtos ecológicos. Quando você se cuida conosco, você também cuida do mundo.</p>
                 </div>
              </div>
         
@@ -19,10 +19,10 @@
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class=" altera-fontes cor col-lg-1 col-md-3 mb-4 mb-md-0  text-nowrap text-justify " >
+        <div class=" altera-fontes cor medida  text-nowrap text-justify " >
           <h5>Conta</h5>
   
-          <ul class="list-unstyled mb-0">
+          <ul class="list-unstyled regua">
             <li>
               <a href="#!" class="cor">Minha conta</a>
             </li>
@@ -34,10 +34,10 @@
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class=" altera-fontes cor col-lg-1 col-md-3 mb-4 mb-md-0 text-nowrap text-justify " >
+        <div class=" altera-fontes cor regua text-nowrap text-justify " >
           <h5  >Institucional</h5>
   
-          <ul class="list-unstyled mb-0 ">
+          <ul class="list-unstyled ">
             <li>
               <a href="#!" class="cor">Sobre nós</a>
             </li>
@@ -50,7 +50,7 @@
 
         
         <!--Grid column-->
-        <div class=" altera-fontes cor col-lg-2 col-md-3 mb-4 mb-md-0 text-nowrap text-justify " >
+        <div class=" altera-fontes cor col-lg-1 text-nowrap text-justify " >
             <h5 >Ajuda</h5>
     
             <ul class="list-unstyled mb-0">
@@ -62,12 +62,12 @@
           <!--Grid column-->
   
           <!--Grid column-->
-        <div class=" container-fluid altera-fontes cor col-lg-2 col-md-6 mb-4 mb-md-0 text-nowrap text-justify ">
+        <div class=" container-fluid altera-fontes cor col-lg-2 col-md-0 mb-0 mb-md-0 text-nowrap text-justify ">
             <h5> Nos encontre</h5>
     
-            <div class="col-md-12 d-flex  text-justify">
+            <div class="d-flex text-justify">
 
-                <div class="row">
+                <div >
                     <a href="https://www.facebook.com/" target="_blank" class="icoFacebook">
                         <i class=" fa fa-facebook-square" aria-hidden="true"></i>
                     </a>
