--- a/src/app/tela-usuario/tela-usuario.component.html
+++ b/src/app/tela-usuario/tela-usuario.component.html
@@ -1,222 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light  text-nowrap font-weight-bold  " style="background-color: #F5CAC3">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class=" navbar-nav mr-auto">
-            <div class="espaco">
-                <li class="nav-item active">
-                    <a class=" text-white nav-link" href="#como">Como Funciona? <span
-                            class="sr-only">(current)</span></a>
-                </li>
-            </div>
-            <div class="espaco">
-                <li class="nav-item">
-                    <a class=" text-white nav-link" href="#sobre">Sobre nós</a>
-                </li>
-            </div>
-            <div class="espaco">
-                <li class="nav-item">
-                    <a class=" text-white nav-link" href="#time">Nosso time</a>
-                </li>
-            </div>
-            <div class="espaco">
-                <li class="nav-item">
-                    <a class=" text-white nav-link" href="#contato">Contato</a>
-                </li>
-            </div>
-
-
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-
-            <ul class="  social-networks ">
-
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank" class="icoFacebook">
-                        <i class=" fa fa-facebook-square" aria-hidden="true"></i>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="https://www.instagram.com/" target="_blank" class="icoInstagram">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="https://www.twitter.com/" target="_blank" class="icoTwitter">
-                        <i class="fa fa-twitter-square" aria-hidden="true"></i>
-                    </a>
-                </li>
-            </ul>
-
-
-
-        </form>
-    </div>
-</nav>
-
-<!--logo-->
-
-<div class=" d-flex justify-content-center">
-    <img src="https://i.imgur.com/qK0vDVm.jpg" width="250" height="260" alt="logotipo">
-
-</div>
-
-<!--/logo-->
-
-<!-- IconeUser-->
-
-<div class="  container-fluid tamanho d-flex justify-content-end">
-    <a href="https://www.twitter.com/" target="_blank" class="icoUser">
-        <i class="fa fa-user-o" aria-hidden="true"></i>
-    </a>
-    <div class="pl-5">
-        <a href="https://www.twitter.com/" target="_blank" class="icoHeart">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </a>
-    </div>
-
-</div>
-
-
-
-<!-- /IconeUser-->
-
-<!-- menuProdutos-->
-
-<nav class="navbar navbar-expand-lg font-weight-bold navbar-light m-0" style="background-color: white">
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class=" collapse navbar-collapse" id="conteudoNavbarSuportado">
-        <ul class="navbar-nav mr-auto cor altera-menu ">
-
-
-            <li class="nav-item dropdown ">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Categoria
-                </a>
-                <div class="altera-menu dropdown-menu " aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Ofertinhas
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Maquiagem
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Para o cabelo
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Cheirinho bom
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Pele macia
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Cuide-se
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Vender
-                </a>
-                <div class="altera-menu dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-        </ul>
-
-        <!--Barra de pesquisa-->
-        <div class="pesquisa" id="busca">
-            <input type="text" id="text" name="t" value placeholder="O que está procurando?" id="txtBusca"
-                class="clear-default-value search-fiel">
-            <i class="fa fa-search" aria-hidden="true"></i>
-
-        </div>
-    </div>
-
-</nav>
-
-<!--/menuProdutos-->
 
 <!--aspectosConta-->
 <div class=" container-fluid pt-5 " style="background-color: #F7EDE2">
@@ -226,7 +8,7 @@
                 <div class="card-body">
                     <div class="col mx-auto text-center">
                         <img src="https://i.imgur.com/NwSnfBn.png" class='img-fluid' width="500" height="500" alt="gif de uma arvore">
-                        <h2 class="cor card-title">Resumo da conta</h2>
+                        <h2 class="cor card-title">Histórico da compra</h2>
                     </div>
 
                     <div class="cor altera-menu card-group">
@@ -269,7 +51,7 @@
         <!--CardsLateralDireita-->
         <div class="cor altera-menu col-sm-6">
         
-            <div class="margem-card card ">
+            <div class=" card ">
                 <div class=" card-body ">
                     <h5 class="font-weight-bold card-title">Está aqui para vender?</h5>
                     <div class="  container-fluid d-flex justify-content-end">
@@ -283,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="margem-card card">
+            <div class=" card">
                 <div class="card-body">
                     <h5 class="font-weight-bold card-title">Quer ver seus queridinhos?</h5>
                     <div class="  container-fluid tamanho d-flex justify-content-end">
@@ -298,7 +80,7 @@
                 </div>
             </div>
 
-            <div class="margem-card card ">
+            <div class=" card ">
                 <div class=" card-body">
                     <h5 class="font-weight-bold card-title">Mudou alguma coisa?</h5><div class="  container-fluid tamanho d-flex justify-content-end">
                         <a href="https://www.twitter.com/" target="_blank" class="icoUser">
