--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,219 +1,3 @@
-
-<nav class="navbar navbar-expand-lg text-nowrap font-weight-bold navbar-light " style="background-color: #F5CAC3">
-
-    <div class=" altera-menu container-fluid">
-
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ">
-                <div class=" col-md-3">
-                    <li class="nav-item  ">
-                        <a class="nav-link text-white" href="#comoFunciona">Como funciona</a>
-                    </li>
-                </div>
-
-                <div class=" col-md-3">
-                    <li class="nav-item ">
-                        <a class="nav-link text-white " href="#sobreNos">Sobre nós</a>
-                    </li>
-                </div>
-
-                <div class=" col-md-3">
-                    <li class="nav-item ">
-                        <a class="nav-link text-white" href="#time">Conheça nosso time</a>
-                    </li>
-                </div>
-
-                <div class=" col-md-3">
-                    <li class="nav-item ">
-                        <a class="nav-link text-white" href="#contato">Contato</a>
-                    </li>
-                </div>
-
-
-                <div class="ml-auto  d-flex align-items-center  ">
-
-                    <div class=" container-fluid  justify-content-end">
-                        <ul class="  social-networks ">
-
-                            <li>
-                                <a href="https://www.facebook.com/" target="_blank" class="icoFacebook">
-                                    <i class=" fa fa-facebook-square" aria-hidden="true"></i>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="https://www.instagram.com/" target="_blank" class="icoInstagram">
-                                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="https://www.twitter.com/" target="_blank" class="icoTwitter">
-                                    <i class="fa fa-twitter-square" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-            </ul>
-
-        </div>
-    </div>
-</nav>
-<!--logo-->
-
-<div class=" d-flex justify-content-center">
-    <img src="https://i.imgur.com/qK0vDVm.jpg" width="250" height="260" alt="logotipo">
-
-</div>
-
-<!--/logo-->
-
-<!-- IconeUser-->
-
-<div class="  container-fluid tamanho d-flex justify-content-end">
-    <a href="https://www.twitter.com/" target="_blank" class="icoUser">
-        <i class="fa fa-user-o" aria-hidden="true"></i>
-    </a>
-    <div class="pl-5">
-        <a href="https://www.twitter.com/" target="_blank" class="icoHeart">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </a>
-    </div>
-
-</div>
-<!-- /IconeUser-->
-
-<!-- menuProdutos-->
-
-<nav class="navbar navbar-expand-lg font-weight-bold navbar-light m-0" style="background-color: white">
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class=" collapse navbar-collapse" id="conteudoNavbarSuportado">
-        <ul class="navbar-nav mr-auto cor altera-menu ">
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Categoria
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Ofertinhas
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Maquiagem
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Para o cabelo
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Cheirinho bom
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Pele macia
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Cuide-se
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Vender
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Ação</a>
-                    <a class="dropdown-item" href="#">Outra ação</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Algo mais aqui</a>
-                </div>
-            </li>
-
-        </ul>
-
-        <form class="pesquisa" id="busca">
-            <input type="text" id="text" name="t" value placeholder="O que está procurando?" id="txtBusca"
-                class="clear-default-value search-fiel">
-            <i class="fa fa-search" aria-hidden="true"></i>
-
-        </form>
-    </div>
-
-</nav>
-<!--/menuProdutos-->
-
-
 <!-- formulario cadastro-->
 
 <head >
@@ -228,31 +12,31 @@
             <h1> Cadastre-se </h1>
 
             <div class='label-float d-flex justify-content-center'>
-                <input type="text" id="nome" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.nomeCompletoUsuario' type="text" id="nome" placeholder="" required>
                 <label for="nome">Nome completo*</label>
 
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input type="text" id="nomeSocial" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.nomeSocial' type="text" id="nomeSocial" placeholder="" required>
                 <label for="nomeSocial">Nome social</label>
 
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input type="text" id="dataDeNascimento" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.dataAniversario' type="text" id="dataDeNascimento" placeholder="" required>
                 <label for="dataDenNscimento">Data de nascimento*</label>
 
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input type="text" id="cpf" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.cpf'type="text" id="cpf" placeholder="" required>
                 <label for="cpf">CPF*</label>
 
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input type="text" id="email" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.emailUsuario' type="text" id="email" placeholder="" required>
                 <label for="email">E-mail*</label>
 
             </div>
@@ -263,7 +47,7 @@
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input type="text" id="confirmeSenha" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.senhaUsuario' type="text" id="confirmeSenha" placeholder="" required>
                 <label for="confirmeSenha">Confirme sua senha*</label>
 
             </div>
