--- a/src/app/categorias/categorias.component.css
+++ b/src/app/categorias/categorias.component.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
@@ -7,7 +6,6 @@
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
 }
-
 
 .btn-primary{
     background-color: #F28482;
@@ -26,4 +24,25 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.btn-secondary{
+    background-color: #F28482;
+    border-color: #F28482;
+    color: #FFFFFF;
+    height: 42px;
+    width: 230px;
+    left: 752px;
+    top: 886px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+.dropdown-menu{
+    background-color: #F28482;
+    border-color: #F28482;
+    color: white;
+    font-weight: bold;
+}
 
+.dropdown-item{
+    color: white;
+    font-weight: bold;
+}
