--- a/src/app/corpo-home/corpo-home.component.css
+++ b/src/app/corpo-home/corpo-home.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .cor-card{
     background-color: #F6BD60;
 
@@ -10,6 +12,7 @@ height: 42px;
 width: 230px;
 left: 752px;
 top: 886px;
-border-radius: 0px;
+border-radius: 5px;
 font-weight: bold;
+font-family: 'Roboto', sans-serif; 
  }
