--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -63,29 +63,9 @@
 
 <!-- IconeUser-->
 
-<div class="container-fluid tamanho d-flex justify-content-end">
-    <a href="https://www.twitter.com/" target="_blank" class="icoUser">
-        <i class="fa fa-user-o" aria-hidden="true"></i>
-    </a>
-    <div class="pl-4 pr-3">
-        <a href="https://www.twitter.com/" target="_blank" class="icoHeart">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </a>
-    </div>
-
-</div>
-
-
-
 <!-- /IconeUser-->
 
 <!-- menuProdutos-->
-
-<div class=" container-fluid d-flex justify-content-center">
-    
-</div>
-
-
 
 <nav class="navbar navbar-expand-lg font-weight-bold navbar-light m-0" style="background-color: white">
 
@@ -98,7 +78,7 @@
         <ul class="navbar-nav cor altera-menu posicao ">
 
 
-            
+
 
             <li class="nav-item">
                 <a class="  nav-link" href="#ofertas">Baratinhos</a>
@@ -143,3 +123,76 @@
 </nav>
 
 <!--/menuProdutos-->
+<div class="container-fluid tamanho d-flex justify-content-end">
+    <div class="ml-auto d-flex align-items-center pr-3">
+        <a href="https://www.twitter.com/" target="_blank" class="icoHeart">
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+        </a>
+    </div>
+
+    <!-- Botão para acionar o pop up de Login-->
+    <div class="d-flex justify-content-end">
+        <button class="btn btn-floating " data-toggle="modal" data-target="#ExemploModalCentralizado">
+            <i class="fa fa-user-o" aria-hidden="true"></i>
+        </button>
+    </div>
+    <!-- /Botão para acionar pop up de Login-->
+
+    <!-- Modal Pop-Up -->
+    <div class="modal fade" id="ExemploModalCentralizado">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div>
+                    <div>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                            <!--fechamento X--> <span aria-hidden="true">&times;</span>
+                            <!--/fechamento X-->
+                        </button>
+                    </div>
+
+                    <!--card Pop-Up-->
+
+                    <body class="estiloDoPopUp">
+                        <div class="containerPopUp">
+                            <div class="pt-0">
+                                <h1>Já tem uma conta?</h1>
+
+                                <!--Campo preenchimento usuário já cadastrado-->
+                                <div class="label-float">
+                                    <input type="text" id="email" placeholder="">
+                                    <label for="email">E-mail</label>
+                                </div>
+
+                                <div class="label-float">
+                                    <input type="text" id="senha" placeholder="">
+                                    <label for="senha">Senha</label>
+                                </div>
+                                <!--Campo preenchimento usuário já cadastrado-->
+
+                                <!--Campo esqueceu senha -->
+                                <a class="textEsqueceu" href="">Esqueceu sua senha?</a>
+                                <!--/Campo esqueceu senha -->
+
+                                <!--Botão de Entrar-->
+                                <div class="justify-center">
+                                    <button class="bt-entrar">Seja bem-vinde</button>
+                                </div>
+                                <!--/Botão de Entrar-->
+                                <div class="justify-center">
+                                    <hr>
+                                </div>
+
+                                <h1>Ainda não tem uma conta?</h1>
+
+                                <!--Botão de Cadastrar-->
+                                <div class="justify-center">
+                                    <button class="bt-entrar">Venha para nossa Ecovila</button>
+                                </div>
+                                <!--Botão de Cadastrar-->
+
+                            </div>
+                        </div>
+                    </body>
+                    <!--/card Pop-Up-->
+
+                </div>
