--- a/src/app/minhas-compras/minhas-compras.component.html
+++ b/src/app/minhas-compras/minhas-compras.component.html
@@ -1,27 +1,25 @@
-<!--CardsProdutos-->
+<!--cardsFavoritos-->
 <div class="container-fluid pt-5 pb-5" style="background-color: #F7EDE2">
     <div class="card pt-4 pb-4 m-4 ">
 
-        <div class="row">
-            <div class=" col-sm-6 pl-5 cor d-flex justify-content-start">
-                <h1> Meus Produtos</h1>
-            </div>
-            <div class=" col-sm-6 pr-5 d-flex justify-content-end">
-                <a href="#" class="btn btn-primary">Adicionar produtos</a>
-            </div>
 
+        <div class="col-sm-3 ml-3 cor text-nowrap ">
+            <h1> Minhas Compras</h1>
         </div>
+
+
         <div class="card mr-4 ml-4 ">
             <div class=" card-group text-center">
-                <div class="container-fluid pt-6">
-                    <div class="card  " style="width: 18rem;">
-                     <img src="https://i.imgur.com/7q6Fouf.jpg" class="img-fluid" width="400" height="263"  alt="imagem principal">
-                     <div class="card-body row justify-content-center" style="background-color: #F6BD60;">
-                      <p class="card-text">Creme de leite de coco para cabelo cacheado.</p>
-                      <a href="#" class="btn btn-primary">Ver mais</a> 
-                       
+                <div class="card ">
+                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <div class="card-body">
+                        <h5 class="card-title">Título do card</h5>
+                        <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
+                            introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
+                        <a href="#" class="btn btn-primary">Remover produto</a>
                     </div>
-                  </div>
+
+                </div>
                 <div class="card">
                     <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
                     <div class="card-body">
@@ -118,8 +116,7 @@
             </div>
         </div>
 
-
-
+        <!--/cardFavoritos-->
+        
     </div>
 </div>
-<!--/CardProdutos-->
