--- a/src/app/tela-usuario/tela-usuario.component.css
+++ b/src/app/tela-usuario/tela-usuario.component.css
@@ -1,57 +1,15 @@
-/* topo das paginas*/
-
-ul.social-networks li{
-    display: inline;
-    margin: 0;
-    padding: 5px;
-    
-
-}
-
-
-ul.social-networks{
-    list-style: none;
-       padding: 0;
-       
-}
-
-.fa{
-    font-size: 15pt;
-    color: black;
-    padding:5px;
-    }
-
-.fa-facebook-square:hover{
-color:#3b5998;
-
-}
-
-.fa-instagram:hover{
-    color:#C13584;
-    }
-
-.fa-twitter-square:hover{
-    color:#143c91;
-    }
-    
-
- .fa-heart-o:hover{
-    color: darkred;
- }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .altera-menu {
     font-style: normal; /*caso queira deixar alterar o estilo da fonte*/
     font-size: 17px; /*caso queira alterar o tamanho da fonte*/
     font-family: sans-serif; /*caso queira mudar o tipo de fonte*/
-    
-    
+      
  }
 
  .cor{
     color: #84A59D;
 }
-
-
 
 .card-body{
    background-color: white;
@@ -89,27 +47,15 @@ color:#3b5998;
     color: #84A59D;
 }
 
-/* caixa de pesquisa */
-
-
-/*
-espaçamento do primerio menu
-*/
-.espaco{
-    padding-inline-end: 158px;
-    padding-inline-start: 20px;
+.btn-primary{
+    background-color: #F28482;
+    border-color: #F28482;
+    color: #FFFFFF;
+    height: 42px;
+    width: 230px;
+    left: 752px;
+    top: 886px;
+    border-radius: 5px;
+    font-weight: bold;
 }
-
-/*
-/espaçamento do primerio menu
-*/
-
-/* /topo das paginas*/
-
-/*
-.margem-card{
-   
-    margin-bottom: 30px;
-}
-*/
 
