--- a/src/app/como-funciona/como-funciona.component.css
+++ b/src/app/como-funciona/como-funciona.component.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .esp-1{
-    font: bolder;
     line-height: 18,75px;
     font-size: 16px;
     color: #84A59D;
@@ -14,12 +15,14 @@
   
 .cor-1{
 
-
+  
     background: #F7EDE2
+
 
 }
 
 .config{
+    font-family: 'Roboto', sans-serif; 
     text-align: justify;
     font-style: normal;
     
@@ -27,4 +30,8 @@
 
 .p{
     margin-top: 10;
+    border-radius: 0px;
+    top: 886px;
+    font-weight: bold;
 }
+
